hphp/test/zend/bad/ext/standard/tests/mail/mail_basic4.php
<?php
/* Prototype  : int mail(string to, string subject, string message [, string additional_headers [, string additional_parameters]])
 * Description: Send an email message 
 * Source code: ext/standard/mail.c
 * Alias to functions: 
 */

echo "*** Testing mail() : basic functionality ***\n";


// Initialise all required variables
$to = 'user@example.com';
$subject = 'Test Subject';
$message = 'A Message';


echo "-- failure --\n";

var_dump( mail($to, $subject, $message) );
?>
===DONE===
